<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AvisoAdapter"
    android:layout_margin="10dp"
    android:id="@+id/holderAvisos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grisMigelHerrero">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMotivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:text="@string/motivo_aviso"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textViewHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/hora_aviso"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginHorizontal="5dp"
                android:text="@string/fecha_aviso"
                android:gravity="center"/>

            <CheckBox
                android:id="@+id/checkConfirmado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/confirmado_aviso"
                tools:ignore="VisualLintButtonSize" />

            <CheckBox
                android:id="@+id/checkAnulado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/anulado_aviso"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>